# OpenGL-tests

./: .gitignore  CMakeLists.txt  cmake_install.cmake
res/shaders/: Basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h  main.cpp
